--- a/crates/common/Cargo.toml
+++ b/crates/common/Cargo.toml
@@ -4,7 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-reqwest = { version = "0.12.7", features = ["json"] }
-serde_json = "1.0.127"
-anyhow = "1.0.86"
-serde = { version = "1.0.209", features = ["derive"] }
+md5 = "0.7.0"
+sha2 = "0.10"
+base64 = "0.22.1"
