--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,9 @@ members = ["crates/*"]
 
 
 [features]
-default=["common"]
+default=[]
 
 [dependencies]
 blockchain = {path = "crates/blockchain", optional = true}
-common = {path = "crates/common", optional = true}
+common-crypt = {path = "crates/common-crypt", optional = true}
 data-api = {path = "crates/data-api", optional = true}
