--- a/crates/blockchain/Cargo.toml
+++ b/crates/blockchain/Cargo.toml
@@ -12,7 +12,7 @@ ethereum-types = "0.14.1"
 secp256k1= "0.29.0"
 hex = "0.4.3"
 bs58 = "0.5.1"
-common = {path="../common"}
+common-crypt = {path= "../common-crypt" }
 anyhow = "1.0.86"
 reqwest = { version = "0.12.7", features = ["json"] }
 serde_json = "1.0.127"
